    - [x86] CPU/AMD: Have smp_num_siblings and cpu_llc_id always be
      present
    - [x86] l1tf: Fix build error seen if CONFIG_KVM_INTEL is disabled
    - [x86] i8259: Add missing include file

  [ Yves-Alexis Perez ]
  * [rt] refresh 0284-cpu-rt-Rework-cpu-down-for-PREEMPT_RT and
    0286-kernel-cpu-fix-cpu-down-problem-if-kthread-s-cpu-is- context after
    applying L1TF fixes.

 -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 15 Aug 2018 16:20:04 +0200

linux (4.9.110-3+deb9u2) stretch-security; urgency=high

  * Revert "net: increase fragment memory usage limits"

 -- Salvatore Bonaccorso <carnil@debian.org>  Mon, 13 Aug 2018 21:31:37 +0200

linux (4.9.110-3+deb9u1) stretch-security; urgency=high

  [ Romain Perier ]
  * fs: Fix up non-directory creation in SGID directories (CVE-2018-13405)

  [ Salvatore Bonaccorso ]
  * tcp: free batches of packets in tcp_prune_ofo_queue()
  * tcp: avoid collapses in tcp_prune_queue() if possible
  * tcp: detect malicious patterns in tcp_collapse_ofo_queue()
  * tcp: call tcp_drop() from tcp_data_queue_ofo()

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 03 Aug 2018 20:30:23 +0200

linux (4.9.110-3) stretch; urgency=medium

  [ Salvatore Bonaccorso ]
  * cdc_ncm: avoid padding beyond end of skb (Closes: #893393)
  * Revert "sit: reload iphdr in ipip6_rcv" (Closes: #903776)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 23 Jul 2018 17:47:13 +0100

linux (4.9.110-2) stretch; urgency=medium

  [ Cyril Brulebois ]
  * udeb: Add virtio_console to virtio-modules (Closes: #903122).

  [ Ben Hutchings ]
  * [x86] xen: Fix boot regression in PV domains (Closes: #903767):
    - x86/xen: Add call of speculative_store_bypass_ht_init() to PV paths
    - x86/cpu: Re-apply forced caps every time CPU caps are re-read
  * ext4: fix false negatives *and* false positives in ext4_check_descriptors()
    (Closes: #903838)
  * xen-netfront: Fix regressions in 4.9.104 (Closes: #903914):
    - Fix mismatched rtnl_unlock