@@ -61,6 +61,14 @@ diff --git a/drivers/hv/vmbus_drv.c b/drivers/hv/vmbus_drv.c
 index 0276d2ef06ee..8868045eabde 100644
 --- a/drivers/hv/vmbus_drv.c
 +++ b/drivers/hv/vmbus_drv.c
+@@ -43,6 +43,7 @@
+ #include <linux/kdebug.h>
+ #include <linux/efi.h>
+ #include <linux/random.h>
++#include <asm/irq_regs.h>
+ #include "hyperv_vmbus.h"
+ 
+ static struct acpi_device  *hv_acpi_dev;
 @@ -761,6 +761,8 @@ static void vmbus_isr(void)
  	void *page_addr;
  	struct hv_message *msg;
