@@ -110,6 +110,8 @@ linux (4.9.110-3+deb9u3) UNRELEASED; urgency=medium
   * [rt] refresh 0284-cpu-rt-Rework-cpu-down-for-PREEMPT_RT and
     0286-kernel-cpu-fix-cpu-down-problem-if-kthread-s-cpu-is- context after
     applying L1TF fixes.
+  * [rt] update 0281-random-Make-it-work-on-rt to fix builds with recent
+    compilers.
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 15 Aug 2018 16:20:04 +0200
 
